--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <!-- First Body Section -->
 <!-- Beginning of header-->
 <header class="header">
-	<nav class="row">
-		<img class="header-logo" src="./img/Udacity-logo.png" alt="Company Logo">
-		<div class="text-right header-info">
+	<nav class="nav-bar">
+		<img class="header-logo" src="./img/icon.png" alt="Company Logo">
+		<div class="header-info">
 			<h1>Oluwatomisin L.</h1>
 			<small>Front-End Ninja</small>
 		</div>
@@ -26,39 +26,31 @@
 
 <!-- Second Body Section -->
 <!-- Image -->
-<section class="row">
-	<div class="col-12">
+<section class="container">
 		<div class="major-image">
+			<img src="./img/fe.jpg" alt="Front End Web image">
 		</div>
-	</div>
 </section>
 
 <!-- Third Body Section --> 
 <!-- Featured works -->
-	<h2 class="featured-works text-center">Featured Works</h2>
+<section class="container">
+	<h2 class="featured-works">Featured Works</h2>
 	<p>In the few months of my journey as a Web Developer, I have been able to build the projects as listed below:</p>
-<section class="row main">
-	<figure class="sm-col-12 md-col-3 lg-col-3 col-3">
-		<div class="placeholder minor-image"><img src="./img/pixel.jpg" alt="Github logo">
-		</div>
+	<figure class="card">
+		<img class="minor-image" src="./img/pixel.jpg" alt="Github logo">
 		<h3>Pixel Art MAker</h3>
 		<a href="https://laludztee.github.io/" target="_blank">Click for demo</a>
 	</figure>
-	<figure class="sm-col-12 md-col-3 lg-col-3 col-3">
-		<div class="placeholder minor-image"><img src="./img/codepen.png" alt="Codepen logo">
-		</div>
+	<figure class="card">
+		<img class="minor-image" src="./img/codepen.png" alt="Codepen logo">
 		<h3>Tribute Page</h3>
 		<a href="https://codepen.io/laludztee/full/pZJdMe/" target="_blank">Click for demo</a>
 	</figure>
-	<figure class="sm-col-12 md-col-3 lg-col-3 col-3">
-		<div class="placeholder minor-image"><img src="./img/github.png" alt="git logo"></div>
+	<figure class="card">
+		<img class="minor-image" src="./img/github.png" alt="git logo"></div>
 		<h3>Github</h3>
 		<a href="http://github.com/laludztee/" target="_blank">Click to view github repo</a>
-	</figure>
-	<figure class="sm-col-12 md-col-3 lg-col-3 col-3">
-		<div class="placeholder minor-image"><img src="./img/NodeJS.png" alt="nodejs logo"></div>
-		<h3>Node JS</h3>
-		<a href="#" target="_blank">Click to view github repo</a>
 	</figure>
 </section>
 <!-- Footer -->
