Attributing content to sources

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 <!-- First Body Section -->
 <!-- Beginning of header-->
+<!-- All images were sourced from Google Search-->
 <header class="header">
 	<nav class="nav-bar">
 		<img class="header-logo" src="./img/icon.png" alt="Company Logo">
