Updated Pixel Art source link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<figure class="card">
 		<img class="minor-image" src="./img/pixel.jpg" alt="Github logo">
 		<h3>Pixel Art MAker</h3>
-		<a href="https://laludztee.github.io/" target="_blank">Click for demo</a>
+		<a href="https://laludztee.github.io/Pixel-Art-MAker" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/codepen.png" alt="Codepen logo">
