Add the Memory Game project

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 		<a href="https://laludztee.github.io/Pixel-Art-Maker" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
+		<img class="minor-image" src="./img/memorygame.jpg" alt="Memory game image">
+		<h3>Memory Game</h3>
+		<a href="https://laludztee.github.io/Memory-Game" target="_blank">Click for demo</a>
+	</figure>
+	<figure class="card">
 		<img class="minor-image" src="./img/codepen.png" alt="Codepen logo">
 		<h3>Tribute Page</h3>
 		<a href="https://codepen.io/laludztee/full/pZJdMe/" target="_blank">Click for demo</a>
