Change the header title

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<img class="header-logo" src="./img/icon.png" alt="Company Logo">
 		<div class="header-info">
 			<h1>Oluwatomisin L.</h1>
-			<small>Front-End Ninja</small>
+			<small>Front-End Developer</small>
 		</div>
 	</nav>
 </header>
