--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<nav class="nav-bar">
 		<img class="header-logo" src="./img/icon.png" alt="Company Logo">
 		<div class="header-info">
-			<h1>Oluwatomisin L.</h1>
+			<h1>Oluwatomisin LALUDE</h1>
 			<small>Front-End Developer</small>
 		</div>
 	</nav>
