UPDATE: Add more Featured Works

--- a/index.html
+++ b/index.html
@@ -44,19 +44,24 @@
 		<a href="https://laludztee.github.io/Pixel-Art-Maker" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/memorygame.jpg" alt="Memory game image">
-		<h3>Memory Game</h3>
-		<a href="https://laludztee.github.io/Memory-Game" target="_blank">Click for demo</a>
-	</figure>
-	<figure class="card">
 		<img class="minor-image" src="./img/codepen.png" alt="Codepen logo">
 		<h3>Tribute Page</h3>
 		<a href="https://codepen.io/laludztee/full/pZJdMe/" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/github.png" alt="git logo"></div>
+		<img class="minor-image" src="./img/Color Game.png" alt="git logo"></div>
 		<h3>Github</h3>
-		<a href="http://github.com/laludztee/" target="_blank">Click to view github repo</a>
+		<a href="http://github.com/laludztee/Color-Game" target="_blank">Click to view github repo</a>
+	</figure>
+	<figure class="card">
+		<img class="minor-image" src="./img/Memory Game.png" alt="git logo"></div>
+		<h3>Github</h3>
+		<a href="http://github.com/laludztee/Memory-Game" target="_blank">Click to view github repo</a>
+	</figure>
+	<figure class="card">
+		<img class="minor-image" src="./img/Frogger Arcade 2.png" alt="git logo"></div>
+		<h3>Github</h3>
+		<a href="http://github.com/laludztee/Frogger-Arcade-Game" target="_blank">Click to view github repo</a>
 	</figure>
 </section>
 <!-- Footer -->
