--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
 		<a href="https://codepen.io/laludztee/full/pZJdMe/" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/Color Game.png" alt="git logo"></div>
+		<img class="minor-image" src="./img/colorgame.png" alt="git logo"></div>
 		<h3>Github</h3>
-		<a href="http://github.com/laludztee/Color-Game" target="_blank">Click to view github repo</a>
+		<a href="https://laludztee.github.io/Color-Game" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/Memory Game.png" alt="git logo"></div>
+		<img class="minor-image" src="./img/memorygame.png" alt="git logo"></div>
 		<h3>Github</h3>
-		<a href="http://github.com/laludztee/Memory-Game" target="_blank">Click to view github repo</a>
+		<a href="https://laludztee.github.io/Memory-Game" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/Frogger Arcade 2.png" alt="git logo"></div>
+		<img class="minor-image" src="./img/froggerarcade.png" alt="git logo"></div>
 		<h3>Github</h3>
-		<a href="http://github.com/laludztee/Frogger-Arcade-Game" target="_blank">Click to view github repo</a>
+		<a href="https://laludztee.github.io/Frogger-Arcade-Game" target="_blank">Click for demo</a>
 	</figure>
 </section>
 <!-- Footer -->
