--- a/index.html
+++ b/index.html
@@ -50,18 +50,23 @@
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/colorgame.png" alt="git logo"></div>
-		<h3>Github</h3>
+		<h3>Color Game</h3>
 		<a href="https://laludztee.github.io/Color-Game" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/memorygame.png" alt="git logo"></div>
-		<h3>Github</h3>
+		<h3>Memory Game</h3>
 		<a href="https://laludztee.github.io/Memory-Game" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/froggerarcade.png" alt="git logo"></div>
-		<h3>Github</h3>
+		<h3>Frogger Arcade Game</h3>
 		<a href="https://laludztee.github.io/Frogger-Arcade-Game" target="_blank">Click for demo</a>
+	</figure>
+	<figure class="card">
+		<img class="minor-image" src="./img/github.png" alt="git logo"></div>
+		<h3>Github</h3>
+		<a href="https://github.com/Laludztee" target="_blank">Click to view Github Profile</a>
 	</figure>
 </section>
 <!-- Footer -->
