--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="./css/styles.css">
 	<link rel="stylesheet" href="./css/responsive.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet"> 
+	<link rel="icon" href="./img/icon.png">
 </head>
 <body>
 <!-- First Body Section -->
