--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
 		<a href="https://codepen.io/laludztee/full/pZJdMe/" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/colorgame.png" alt="git logo"></div>
+		<img class="minor-image" src="./img/colorgame.png" alt="color game"></div>
 		<h3>Color Game</h3>
 		<a href="https://laludztee.github.io/Color-Game" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/memorygame.png" alt="git logo"></div>
+		<img class="minor-image" src="./img/memorygame.jpg" alt="memory game"></div>
 		<h3>Memory Game</h3>
 		<a href="https://laludztee.github.io/Memory-Game" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/froggerarcade.png" alt="git logo"></div>
+		<img class="minor-image" src="./img/froggerarcade.png" alt="frogger arcade"></div>
 		<h3>Frogger Arcade Game</h3>
 		<a href="https://laludztee.github.io/Frogger-Arcade-Game" target="_blank">Click for demo</a>
 	</figure>
