--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<a href="https://codepen.io/laludztee/full/pZJdMe/" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/colorgame.png" alt="color game"></div>
+		<img class="minor-image" src="./img/colorgame.PNG" alt="color game"></div>
 		<h3>Color Game</h3>
 		<a href="https://laludztee.github.io/Color-Game" target="_blank">Click for demo</a>
 	</figure>
