--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- Featured works -->
 <section class="container">
 	<h2 class="featured-works">Featured Works</h2>
-	<p>In the few months of my journey as a Web Developer, I have been able to build the projects as listed below:</p>
+	<p>I have developed skills in HTML5, CSS3, JavaScript, jQuery, ReactJS, Gulp and Debugging using Chrome Dev Tools. In the few months of my journey as a Web Developer, I have been able to build the projects as listed below:</p>
 	<figure class="card">
 		<img class="minor-image" src="./img/pixel.jpg" alt="Github logo">
 		<h3>Pixel Art MAker</h3>
@@ -60,7 +60,7 @@
 		<a href="https://laludztee.github.io/Memory-Game" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/froggerarcade.png" alt="frogger arcade"></div>
+		<img class="minor-image" src="./img/froggerarcade.PNG" alt="frogger arcade"></div>
 		<h3>Frogger Arcade Game</h3>
 		<a href="https://laludztee.github.io/Frogger-Arcade-Game" target="_blank">Click for demo</a>
 	</figure>
