--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 		<a href="https://laludztee.github.io/Pixel-Art-Maker" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/codepen.png" alt="Codepen logo">
-		<h3>Tribute Page</h3>
-		<a href="https://codepen.io/laludztee/full/pZJdMe/" target="_blank">Click for demo</a>
+		<img class="minor-image" src="./img/slide1.jpg" alt="Restaurant">
+		<h3>Restaurant Website</h3>
+		<a href="https://laludztee.github.io/Restaurant-Website/" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/color-game.png" alt="color game"></div>
