--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<a href="https://laludztee.github.io/Pixel-Art-Maker" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/slide1.jpg" alt="Restaurant">
+		<img class="minor-image" src="./img/food1.jpg" alt="Restaurant">
 		<h3>Restaurant Website</h3>
 		<a href="https://laludztee.github.io/Restaurant-Website/" target="_blank">Click for demo</a>
 	</figure>
