--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- Featured works -->
 <section class="container">
 	<h2 class="featured-works">Featured Works</h2>
-	<p>I have developed skills in HTML5, CSS3, JavaScript, jQuery, ReactJS, Gulp and Debugging using Chrome Dev Tools. In the few months of my journey as a Web Developer, I have been able to build the projects as listed below:</p>
+	<p>I have developed skills in HTML5, CSS3, JavaScript, jQuery, ReactJS, GulpJS, Object Oriented Programming, Git, Responsive Web Design, Web Accessibility and Test Driven Development. In the few months of my journey as a Web Developer, I have been able to build the projects as listed below:</p>
 	<figure class="card">
 		<img class="minor-image" src="./img/pixel.jpg" alt="Github logo">
 		<h3>Pixel Art MAker</h3>
