--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/food1.jpg" alt="Restaurant">
-		<h3>Restaurant Website</h3>
-		<a href="https://laludztee.github.io/Restaurant-Website/" target="_blank">Click for demo</a>
+		<h3>Restaurant Reviews</h3>
+		<a href="https://laludztee.github.io/Restaurant-Review-App/" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/color-game.png" alt="color game"></div>
