--- a/index.html
+++ b/index.html
@@ -42,32 +42,32 @@
 	<figure class="card">
 		<img class="minor-image" src="./img/pixel.jpg" alt="Github logo">
 		<h3>Pixel Art MAker</h3>
-		<a href="https://laludztee.github.io/Pixel-Art-Maker" target="_blank">Click for demo</a>
+		<a href="https://oluwatomisinlalude.github.io/Pixel-Art-Maker" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/food1.jpg" alt="Restaurant">
 		<h3>Restaurant Reviews</h3>
-		<a href="https://laludztee.github.io/Restaurant-Review-App/" target="_blank">Click for demo</a>
+		<a href="https://oluwatomisinlalude.github.io/Restaurant-Review-App/" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/color-game.png" alt="color game"></div>
 		<h3>Color Game</h3>
-		<a href="https://laludztee.github.io/Color-Game" target="_blank">Click for demo</a>
+		<a href="https://oluwatomisinlalude.github.io/Color-Game" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/memorygame.jpg" alt="memory game"></div>
 		<h3>Memory Game</h3>
-		<a href="https://laludztee.github.io/Memory-Game" target="_blank">Click for demo</a>
+		<a href="https://oluwatomisinlalude.github.io/Memory-Game" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/froggerarcade.jpg" alt="frogger arcade"></div>
 		<h3>Frogger Arcade Game</h3>
-		<a href="https://laludztee.github.io/Frogger-Arcade-Game" target="_blank">Click for demo</a>
+		<a href="https://oluwatomisinlalude.github.io/Frogger-Arcade-Game" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/github.png" alt="git logo"></div>
 		<h3>Github</h3>
-		<a href="https://github.com/Laludztee" target="_blank">Click to view Github Profile</a>
+		<a href="https://github.com/oluwatomisinlalude" target="_blank">Click to view Github Profile</a>
 	</figure>
 </section>
 <!-- Footer -->
