--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 		<a href="https://oluwatomisinlalude.github.io/Pixel-Art-Maker" target="_blank">Click for demo</a>
 	</figure>
 	<figure class="card">
-		<img class="minor-image" src="./img/food1.jpg" alt="Restaurant">
-		<h3>Restaurant Reviews</h3>
-		<a href="https://oluwatomisinlalude.github.io/Restaurant-Review-App/" target="_blank">Click for demo</a>
+		<img class="minor-image" src="./img/tic-tac-toe.png" alt="tic-tac-toe">
+		<h3>Tic-Tac-Toe(ReactJS)</h3>
+		<a href="https://www.github.com/oluwatomisinlalude/Tic-Tac-Toe-ReactJS/" target="_blank">Click to view repo</a>
 	</figure>
 	<figure class="card">
 		<img class="minor-image" src="./img/color-game.png" alt="color game"></div>
